<resources>
    <string name="app_name">DiceTask</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="detail_fragment_label">Detail Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hint_search">Search…</string>
    <string name="title_error_dialog">Error</string>
    <string name="title_name">NAME:</string>
    <string name="title_score">SCORE:</string>
    <string name="title_country">COUNTRY:</string>
    <string name="title_type">TYPE:</string>
    <string name="title_releases">RELEASES:</string>
    <string name="message_no_release">There is no release</string>
</resources>