<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_size_medium">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:gravity="start"
            android:text="@string/title_name"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_micro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            tools:text="Name"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:gravity="start"
            android:text="@string/title_score"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_micro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            tools:text="Score"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_score"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:gravity="start"
            android:text="@string/title_country"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_micro"
            app:layout_constraintTop_toBottomOf="@id/text_view_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            tools:text="Country"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:gravity="start"
            android:text="@string/title_type"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_micro"
            app:layout_constraintTop_toBottomOf="@id/text_view_score"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            tools:text="Type"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_type"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title_releases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:text="@string/title_releases"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintTop_toBottomOf="@id/text_view_country"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_message_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:text="@string/message_no_release"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_releases"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_releases"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>